authorization qo'shilidi va ishlashi tekshirildi. Qo'shimcha qo'shadigan joylari bor. Product Categoryaga faqat sudo ga permission berdim. Client uchun client_service getclient list delete client list qilishga ruhsat berilmadi
